--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "typewriter-effect": "^2.18.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
